--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -139,10 +139,8 @@ header ul:before {
   box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 0, inset rgba(255, 255, 255, 0.7) 0 -1px 0;
 }
 header ul li {
-  width: 79px;
   float: left;
-  border-right: 1px solid #3A7CBE;
-  height: 38px;
+  border-right: none;
 }
 header ul li.single {
   border: none;
